--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,33 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import About from '../components/About.astro';
+import Card from '../components/Card.astro';
+import Footer from '../components/Footer.astro';
+// import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
+import SocialMedia from '../components/SocialMedia.astro';
+import { articles } from '../data/articles';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+	<!-- <Header /> -->
+	<main>
+		<Hero />
+		<About />
+		<section class="max-w-6xl mx-auto px-4 pb-16">
+			<h2 class="text-3xl font-bold text-center mb-8">Latest Articles</h2>
+			<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+			  {articles.map(article => (
+				<Card 
+				  title={article.title}
+				  summary={article.summary}
+				  image={article.image}
+				  url={article.url}
+				/>
+			  ))}
+			</div>
+		  </section>
+		  <SocialMedia />
+	</main>
+	<Footer />
 </Layout>
