--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,9 +1,9 @@
-<section class="bg-indigo-50">
+<section class="bg-gray-950">
   <div
-    class="max-w-6xl mx-auto px-44 pt-16 md:py-24 flex flex-col items-center text-center"
+    class="max-w-6xl mx-auto px-24 md:pb-24 flex flex-col items-center text-center text-white"
   >
   <h2 class="text-3xl font-bold text-center mb-8">About</h2>
-    <p>
+    <p class="text-xl text-gray-300 max-w-4xl mb-8">
         I specialize in building intuitive and high-performance digital experiences, focusing on usability and efficiency. My role goes beyond writing code—I translate needs into scalable, well-structured solutions. As a Technical Product Ambassador, I help teams and users understand and make the most of the tools they use, facilitating adoption. In DevRel, I share knowledge, create technical content, and connect developers with products that enhance their work. My goal is to bridge technology and people, driving learning, collaboration, and the creation of impactful solutions.
     </p>
   </div>
