--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,9 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="bg-gray-800 text-white py-8 mt-auto">
+<footer class="bg-black text-white py-8 mt-auto border-t border-gray-800">
     <div class="mt-2 text-center">
-      <p>&copy; {currentYear} La Duquesa Dev Blog. All rights reserved.</p>
+      <p>&copy; {currentYear} La Duquesa Blog. All rights reserved.</p>
     </div>
 </footer>
 
