--- a/src/components/SocialMedia.astro
+++ b/src/components/SocialMedia.astro
@@ -1,11 +1,5 @@
 ---
-const socialLinks = [
-  { name: "LinkedIn", icon: "linkedin", url: "https://linkedin.com/in/laduquesadev/" },
-  { name: "GitHub", icon: "github", url: "https://github.com/LaDuquesaDev" },
-  { name: "Instagram", icon: "instagram", url: "https://instagram.com/laduquesadev/" },
-  { name: "YouTube", icon: "youtube", url: "https://youtube.com/@laduquesadev" },
-  { name: "Twitch", icon: "twitch", url: "https://twitch.tv/laduquesadev" }
-];
+import { socialLinks } from "../models/rrss";
 ---
 
 <section class="bg-gray-950 py-12">
