--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ import profilePicture from "../assets/profile-photo.png"
     
     <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">Hi! I'm Yuli 👋</h1>
     <p class="text-xl text-gray-300 max-w-2xl mb-8">
-      Frontend Developer | Technical Product Ambassador | DevRel
+      Frontend & Mobile Developer | DevRel
     </p>
     <a href="https://medium.com/@laduquesadev" class="bg-purple-600 hover:bg-purple-700 text-white font-medium py-2 px-6 rounded-md transition-colors">
       View All Articles
